@@ -3,6 +3,7 @@
 
 * add new updates here without heading until a release
 
+* -tkkr auto team killer - Dave Brosius
 * world file caching - Colin Bayer, Dave Brosius, others
 * optional tank labels for roaming - Frank Thilo, Tim Riker
 * draw tank lights correctly for (T)(N)(O) tanks - Dave Brosius
